[gd_scene load_steps=9 format=3 uid="uid://dwhtby81ylt3s"]

[ext_resource type="Script" path="res://ui/components/left_menu/left_menu.gd" id="1_yja75"]
[ext_resource type="Texture2D" uid="uid://idhpbwi2nf2o" path="res://assets/images/wallet-check.png" id="3_ov53k"]
[ext_resource type="Script" path="res://ui/components/left_menu/Quotes.gd" id="7_kx1k8"]
[ext_resource type="FontFile" uid="uid://ciu7chyqqs4k7" path="res://assets/fonts/Saira_Expanded-Bold.ttf" id="11_6qy05"]
[ext_resource type="FontFile" uid="uid://dgxbgdcr3s84u" path="res://assets/fonts/Saira_Expanded-Regular.ttf" id="12_nwgc3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8gs8"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3enni"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0, 0.968627, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_xvpkc"]
Button/styles/normal = SubResource("StyleBoxFlat_3enni")

[node name="Menu" type="PanelContainer"]
clip_contents = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -123.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_c8gs8")
script = ExtResource("1_yja75")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 8

[node name="Wallet" type="Button" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_xvpkc")
icon = ExtResource("3_ov53k")
icon_alignment = 1

[node name="PrevButton" type="Button" parent="MarginContainer/HBox"]
texture_filter = 4
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 38
text = "<"
flat = true

[node name="Control" type="Control" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(5, 2.08165e-12)
layout_mode = 2

[node name="Quotes" type="Label" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(250, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13
vertical_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/HBox"]
custom_minimum_size = Vector2(5, 2.08165e-12)
layout_mode = 2

[node name="NextButton" type="Button" parent="MarginContainer/HBox"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 38
text = ">"
flat = true

[node name="QuotesDialog" type="AcceptDialog" parent="."]
title = "QUOTES"
initial_position = 2
size = Vector2i(512, 384)
unresizable = true
content_scale_mode = 1
content_scale_aspect = 4
ok_button_text = "CLOSE"

[node name="Box" type="VBoxContainer" parent="QuotesDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="QuotesDialog/Box"]
layout_mode = 2

[node name="Author" type="Label" parent="QuotesDialog/Box/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("11_6qy05")
theme_override_font_sizes/font_size = 28
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Margin" type="ColorRect" parent="QuotesDialog/Box"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="Quotes" type="Label" parent="QuotesDialog/Box" node_paths=PackedStringArray("author_label")]
custom_minimum_size = Vector2(496, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("12_nwgc3")
theme_override_font_sizes/font_size = 16
text = "Quote"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("7_kx1k8")
author_label = NodePath("../Header/Author")

[connection signal="pressed" from="MarginContainer/HBox/PrevButton" to="QuotesDialog/Box/Quotes" method="_on_prev_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/NextButton" to="QuotesDialog/Box/Quotes" method="_on_next_button_pressed"]
